--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     
     <ul id="listaTarefas"></ul>
 
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
